...
    MenuHelpIncludeInfoLog -> "Enable Detailed Logging"
    MenuHelpOpenHomePage -> "Open vLabeler Home Page"
    MenuHelpOpenLatestRelease -> "Open Latest Release"
    MenuHelpOpenGitHub -> "Open GitHub Page"
    MenuHelpJoinDiscord -> "Join Discord"
    MenuHelpAbout -> "About"
    CommonOkay -> "OK"
    CommonApply -> "Apply"
    CommonCancel -> "Cancel"
    CommonYes -> "Yes"
    CommonNo -> "No"
    CommonWarning -> "Warning"
    CommonError -> "Error"
    CommonDetails -> "Details"
    CommonOthers -> "Others"
...
    CommonSelect -> "Select"
    CommonOpen -> "Open"
    CommonSave -> "Save"
    CommonReset -> "Reset"
    CommonClear -> "Clear"
    CommonInputErrorPromptNumber -> "Please enter a number."
    CommonInputErrorPromptInteger -> "Please enter an integer number."
    CommonInputErrorPromptNumberRange -> "Please enter a number between %s and %s."
    CommonInputErrorPromptNumberMin -> "Please enter a number greater than or equal to %s."
    CommonInputErrorPromptNumberMax -> "Please enter a number less than or equal to %s."
    CommonRootModuleName -> "(Root)"
    StarterStart -> "Start"
    StarterNewProject -> "New Project..."
...
    PluginDialogImportFromSavedParams -> "Load default saved parameters"
    PluginDialogImportFromSlot -> "Load from slot %1\$d: %2\$s"
    PluginDialogEmptySlotName -> "(empty)"
    PluginDialogImportFromFile -> "Import from file"
    PluginDialogImportSuccess -> "Successfully imported the preset."
    PluginDialogImportFailure -> "Failed to import the preset. It's probably incompatible with the current item."
    PluginDialogExportToSavedParams -> "Save parameters as default"
    PluginDialogExportToSlot -> "Save parameters to slot %1\$d: %2\$s"
    PluginDialogExportToFile -> "Export parameters to file"
    PluginDialogExportSuccess -> "Successfully exported the preset."
    PluginDialogExportFailure -> "Failed to export the preset."
    PluginEntrySelectorTextMatchTypeEquals -> "Equals"
    PluginEntrySelectorTextMatchTypeContains -> "Contains"
    PluginEntrySelectorTextMatchTypeStartsWith -> "Starts with"
    PluginEntrySelectorTextMatchTypeEndsWith -> "Ends with"
...
